--- a/src/Nav.css
+++ b/src/Nav.css
@@ -12,13 +12,21 @@
   padding-bottom: 17px;
 }
   
-.makeStyles-navBar-4 div{
-  border-bottom: 3px solid snow;
+.navBar div{
+  border-bottom: 3px solid white;
   cursor: pointer;
 }
-.makeStyles-navBar-4 div:hover {
+.navBar div:hover {
   border-bottom: 3px solid silver;
   cursor: pointer;
 }
 
+.link{
+  color: black;
+  text-decoration: none;
+}
   
+.link:hover{
+  text-decoration: none;
+  color: black;
+}
