Navbar selection, and Product generation.

--- a/src/Nav.css
+++ b/src/Nav.css
@@ -11,22 +11,25 @@
   padding-top: 17px;
   padding-bottom: 17px;
 }
-  
-.navBar div{
-  border-bottom: 3px solid white;
-  cursor: pointer;
-}
-.navBar div:hover {
-  border-bottom: 3px solid silver;
-  cursor: pointer;
-}
 
 .link{
-  color: black;
+  color: dimgray;
   text-decoration: none;
+  text-transform:uppercase;
+  padding: 3px;
+  margin: 3px;
 }
   
 .link:hover{
+  cursor: pointer;
+  color: dimgray;
   text-decoration: none;
-  color: black;
+  border-bottom: 3px solid dimgray;
+}
+
+.is_active{
+  border-bottom: 3px solid dimgray;
+  cursor: pointer;
+  color: dimgray;
+  font-weight: bold;
 }
